--- a/diary.html
+++ b/diary.html
@@ -2,6 +2,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css.css">
   <link rel="stylesheet" href="csstesting.css">
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="js.js"></script>
 
 <body onload="loadCustomData()"></body>
@@ -43,41 +44,36 @@
 
 <!-- Left Side navigation -->
 <div class="rightsidenav" id="rightsidenav">
-  <div class="weatherback1">
-    <img class="weathericon" src="sunny_foggy.png">
-    <div class="weatherinfo">
-      <p class="weathertemp">18C</p>
-      <p class="weatherday">Today</p>
+  <div id="comp">
+    <div class="weatherback1">
+    
+      <weather1></weather1>
     </div>
 
-  </div>
-  <div class="weatherback2">
-    <img class="weathericon2" src="sunny_rainy.png">
-    <div class="weatherinfo">
-      <p class="weathertemp">14C</p>
-      <p class="weatherday">Tom</p>
+    
+    <div class="weatherback2">
+      <weather2></weather2>
     </div>
-  </div>
-  <br>
-  <br>
-  <p class="p">Priorities
-  <p>
-  <div class="toppriority">
-    <p class="topprioritytitle" id="tptitle"></p>
-    <p class="topprioritytext" id="tpnotes"></p>
-  </div>
+<br>
+<br>
+<p class="p">Priorities
+<p>
 
-  <div class="secondpriority">
-    <p class="secondprioritytitle" id="sctitle"></p>
-    <p class="secondprioritytext" id="scnotes"></p>
-  </div>
+<div class="toppriority">
+  <priority1></priority1>
+</div>
 
-  <div class="thirdpriority">
-    <p class="thirdprioritytitle" id="thtitle"></p>
-    <p class="thirdprioritytext" id="thnotes"></p>
-  </div>
+<div class="secondpriority">
+  <priority2></priority2>
+</div>
+
+<div class="thirdpriority">
+  <priority3></priority3>
+</div>
+</div>
 
 </div>
+
 <button class="openbtnr" id="openright" onclick="toggleRightNav()">&#9776;</button>
 <div class="main" id="main">
 
@@ -119,7 +115,10 @@
 
         </section>
   </div>
+  <script src="./components.js"></script>
+  <script src="jstesting.js"></script>
 </div>
-</header>
-<script src="jstesting.js"></script>
+
+
+
 </body>
