--- a/diary.html
+++ b/diary.html
@@ -42,7 +42,7 @@
 
 
 
-<!-- Left Side navigation -->
+<!-- Right Side navigation -->
 <div class="rightsidenav" id="rightsidenav">
   <div id="comp">
     <div class="weatherback1">
