--- a/calendar.html
+++ b/calendar.html
@@ -37,7 +37,7 @@
 </div>
 <button class="openbtn" id="openleft" onclick="toggleLeftNav()">&#9776;</button>
 
-<!-- Left Side navigation -->
+<!-- Right Side navigation -->
 <div class="rightsidenav" id="rightsidenav">
     <div id="comp">
       <div class="weatherback1">
